# scatter-phy

./: .gitignore  CMakeLists.txt  README.md  compileProto.sh  config.xml  kill.sh  run.sh
communicator/: CMakeLists.txt  README.md  interf.proto
communicator/cpp/: CMakeLists.txt  CPPExample.cpp  CircularBuffer.h  CommManager.cpp  CommManager.h  IPTOS.cpp  IPTOS.h  LayerCommunicator.cpp  LayerCommunicator.h  Makefile  Maybe.h  Message.cpp  Message.h  PriorityQueue.h  README.md  SafeQueue.h  SlidingWindow.h  communicator_wrapper.cpp  communicator_wrapper.h  utils.cpp  utils.h
phy/: CMakeLists.txt
phy/bitstream/: README.txt
phy/cmake/modules/: FindSSE.cmake
phy/matlab/: McF_1_44_tx.m  channel_center_frequencies.m  channelization.m  channelization_with_gap_at_edges.m  check_lbt.m  check_phy_resource_mapping.m  check_phy_resource_mapping_with_filtering.m  check_phy_resource_mappingv1.m  cpu_utilization_callgrindv0.m  ddc.m  delete_files.m  generate_complex_exponential_signal.m  getFilter.m  get_allowed_indexes.m  get_channel_number.m  get_number_of_channels.m  get_unused_bw_in_num_of_subbands.m  listen_before_talking.m  new_sampling_rate.m  new_sampling_rate2.m  new_sampling_rate3.m  new_sampling_rate4.m  new_sampling_rate5.m  plot_ai_log_stats.m  plot_ai_stats_from_mat_file.m  plot_iq_samples.m  plot_lbt_results.m  plot_link_level_conditions.m  plot_link_level_conditions_sc5.m  plot_link_level_conditions_sc5_loop.m  plot_mac_log_stats.m  plot_mac_log_stats_v2.m  plot_mac_log_stats_v3.m  plot_mac_log_stats_v4.m  plot_mac_stats_from_mat_file.m  plot_phy_dump_pss_corr.m  plot_phy_log_stats.m  plot_phy_log_statsv2.m  plot_phy_log_statsv3.m  plot_phy_stats_from_mat_file.m  (+11 more)
phy/matlab/CFO/: a.mat  lte_pss_zc.m  my_awgn.m  pss_based_cfo_estimation.m  pss_based_cfo_estimation_real_signal.m  pss_based_cfo_estimation_real_signalv0_frequency_flat_rayleigh.m  pss_based_cfo_estimation_real_signalv0_multi_path_rayleigh.m  pss_based_cfo_estimation_real_signalv1.m  pss_based_cfo_estimation_real_signalv2.m  pss_based_cfo_estimation_real_signalv3.m  pss_based_cfo_estimation_real_signalv4.m  pss_based_cfo_estimation_real_signalv5.m  pss_based_cfo_estimation_real_signalv6.m  pss_based_cfo_estimation_real_signalv8_awgn.m  pss_based_cfo_estimationv2.m  pss_based_cfo_estimationv3.m  pss_based_cfo_estimationv4.m  pss_based_cfo_estimationv5.m  pss_based_cfo_estimationv6.m  pss_based_cfo_estimationv7.m  pss_based_cfo_estimationv7_aux.m  pss_based_cfo_estimationv8.m  pss_based_cfo_estimationv9.m  verify_pss_based_cfo_estimation.m
phy/matlab/Scenario test/: scenario_testv0.m  scenario_testv1.m  scenario_testv1_aux.m
phy/matlab/TurboCoder/: CblkSegParams.m  findTB.m  testTbSizes.m  turbo_coder_decoder.m
phy/matlab/dcf_tdma/: assess_statistics.m
phy/matlab/fofdm/: FIR_coefficients.m  OFDMvsFOFDM.m  OFDMvsFOFDMExamplev2.m  OFDMvsFOFDMv2.m  OFDMvsFOFDMv3.m  calculateError.m  convert_testbench_output.m  createFirFilterCoeffs.m  createFirFilterCoeffsv2.m  createFirTestSignals.m  createTestSignals.m  myFilter.m  plot_aclr_dbc_measuremnts.m  plot_aclr_dbm_measuremnts.m  plot_aclr_dbm_measuremntsv2.m  plot_aclr_dbm_measuremntsv3.m  plot_aclr_dbm_measuremntsv4.m  plot_ofdm_oob.m  plot_ofdm_oob_v2_rx_side.m  plot_ofdm_oob_v2_tx_side.m  rx_filter_25rb.mat  simple_fir_test.m  test_myfilter.m  test_myfilterv2.m  test_myfilterv3.m  test_naive_filter.m  txSigFOFDM_output.mat  txSigOFDMpadding_input.mat  (+1 more)
phy/rfnoc-scatter/: CMakeLists.txt  MANIFEST.md  README.md
phy/rfnoc-scatter/lib/: CMakeLists.txt  McFsource_block_ctrl_impl.cpp  McFsource_impl.cc  McFsource_impl.h  fir129_block_ctrl_impl.cpp  fir129_impl.cc  fir129_impl.h  qa_scatter.cc  qa_scatter.h  specsense2k_block_ctrl_impl.cpp  specsense2k_impl.cc  specsense2k_impl.h  test_scatter.cc
phy/src/: CMakeLists.txt  alarm_test.c  cell_measurement.c  cfo_check.c  check_cqi_mcs_mapping.c  check_phy_synchronization.h  check_phy_with_channel_emulator.c  decode_subframe.c  encode_subframe.c  encode_superframe.c  fir_filter_checking.c  fir_filter_checking_mac_like.c  helpers.c  helpers.h  measure_throughput.c  measure_throughput_dcf_tdma_auto.c  measure_throughput_fd.c  measure_throughput_fd.h  pdsch_enodeb.c  pdsch_ue.c  pdsch_ue_pkt.c  phy_reception.c  phy_transmission.h  plot.c  plot.h  sch_test_loop.c  sync_decode.h  sync_decode_fd.c  sync_decode_rx.c  tbs_tables_new.c  test_communicator.c  test_complex_short.c  test_fft.c  test_higher_mcs.c  test_scatter_synch_sequence.c  test_timestamp.c  test_trx_filter.c  transceiver.h  trx.h  trx_filter.c  (+2 more)
phy/src/tutorial_examples/: simple_tx.c
phy/test_scripts/: assess_online_phy_bw_and_env_update.py  assess_rx_stats.py  check_tx_frequency_issue.py  configurePython.sh  continuous_reception.py  continuous_receptionv2.py  continuous_receptionv3.py  continuous_transmission.py  continuous_transmissionv2.py  continuous_transmissionv3.py  debug_off_fix.patch  debug_on.patch  debug_on_fix.patch  environment.json  find_best_mcs_for_mcs.py  loop_top.py  measure_self_reception_performance.py  mock_phy.py  process_env_update.py  put_phy_into_idle_rx_mode.py  receive_data.py  send_random_number_of_slots.py  test_communication.py  test_lbt.py  test_lwei.py  test_online_bandwidth_change.py  test_sensing_state.py  test_sw_rf_mon.py  test_transmission_scheduling.py  throughput_optimization.py  transmit_data.py  tx_issue_debug_reception.py  tx_issue_debug_transmission.py  tx_rx_channel_gain_stress_test.py  verify_lte_harvesting_subframe.sh  verify_lte_harvesting_superframe.sh
srslte/: CMakeLists.txt
srslte/examples/: cell_search.c  check_discontinous_tx.c  check_phy_synchronization.c  check_tx_timestamps.c  decode_superframe.c  fir_filter_checking.h  measure_throughput.h  measure_throughput_dcf_tdma_auto.h  measure_throughput_fd_auto.c  measure_throughput_fd_auto.h  pdsch_enodeb_pkt.c  phy_reception.h  phy_transmission.c  psch_test.c  psch_test_loop.c  pss_test_loop.c  read_dumped_file.c  rx_combining_poc.c  stress_test.c  sync_decode_tx.c  test_tx_timestamp.c  trx.c  usrp_capture.c  usrp_txrx.c
srslte/lib/: CMakeLists.txt
(+346 files in other folders)
